<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MinorFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="Child Name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="1024dp" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:focusable="false"
            android:hint="Select Date" />

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:focusable="false"
            android:hint="Incident Time" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:hint="Description"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="Dropdown list for incident location" />

        <Spinner
            android:id="@+id/treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="Dropdown list for incident treatment" />

        <Spinner
            android:id="@+id/teacherProvided"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="Dropdown list for Teacher name" />

        <Spinner
            android:id="@+id/teacherChecked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="Dropdown list for Teacher name" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:hint="Comments"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingVertical="8sp"
            android:text="Save as a Draft"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingVertical="8sp"
            android:text="Send Form to Guardian"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
