...
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingVertical="8sp"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="1024dp" />

        <RelativeLayout
...
